syntax = "proto3";

option csharp_namespace = "Saes.Protos";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package models;

// PASS
message FileDto {
  int32 fileId = 1;
  string guid = 2;
  google.protobuf.BytesValue data = 3;
  google.protobuf.StringValue name = 4;
  google.protobuf.StringValue contentType = 5;
}

message UserRoleDto
{
	int32 userRoleId = 1;
	string name = 2;
}

// PASS
message RightGroupDto
{
	int32 rightGroupId = 1;
	google.protobuf.StringValue code = 2;
	google.protobuf.StringValue name = 3;
}

// PASS
message RightDto
{
	int32 rightId = 1;
	google.protobuf.Int32Value rightGroupId = 2;
	RightGroupDto RightGroupDto = 3;
	google.protobuf.StringValue code = 4;
	google.protobuf.StringValue name = 5;
}

// PASS
message UserRoleRightDto
{
	int32 UserRoleRightId = 1;
	google.protobuf.Int32Value UserRoleId = 2;
	google.protobuf.Int32Value RightId = 3;
	UserRoleDto UserRoleDto = 4;
	RightDto RightDto = 5;
}

// UPDATE /ADD/EDIT
message UserDto
{
	int32 userId = 1;
	string login = 2;
	google.protobuf.Int32Value userRoleId = 3;
	UserRoleDto userRoleDto = 4;
	google.protobuf.Timestamp lastLoginDate = 5;
	google.protobuf.BoolValue twoFactorEnabled = 6;
}

// NEED
message AddressDto
{
	int32 AddressId = 1;
	google.protobuf.StringValue Country = 2;
	google.protobuf.StringValue Region = 3;
	google.protobuf.StringValue City = 4;
	google.protobuf.StringValue District = 5;
	google.protobuf.StringValue BuildingNumber = 6;
	google.protobuf.StringValue Corpus = 7;
	google.protobuf.Int32Value Floor = 8;
	google.protobuf.StringValue Flat = 9;
	google.protobuf.StringValue PostalIndex = 10;

}

message BusinessEntityTypeDto
{
	int32 BusinessEntityTypeId = 1;
	string Name = 2;
}

message BusinessEntityDto
{
	int32 BusinessEntityId = 1;
	int32 BusinessEntityTypeId = 2;
	BusinessEntityTypeDto businessEntityTypeDto = 3;
}

message OrganizationDto
{
	int32 BusinessEntityId = 1;
	int32 OrganizationId = 2;
	google.protobuf.StringValue FullName = 3;
	google.protobuf.StringValue ShortName = 4;
	google.protobuf.Int32Value BusinessAddressId = 5;
	AddressDto BusinessAddressDto = 6;
	google.protobuf.StringValue INN = 7;
	google.protobuf.StringValue KPP = 8;
	google.protobuf.StringValue OKPO = 9;
	google.protobuf.StringValue OGRN = 10;
	google.protobuf.Timestamp DateOfAssignmentOGRN = 11;
	google.protobuf.StringValue DirectorFullName = 12;
	google.protobuf.StringValue ChiefAccountantFullName = 13;
	google.protobuf.StringValue OKVED = 14;
	bool IsOwnerJournalAccountingCPI = 15;
	BusinessEntityDto BusinessEntityDto = 16;
}

message ContactTypeDto
{
	int32 ContactTypeId = 1;
	google.protobuf.StringValue Name = 2;
}

message OrganizationContactDto
{
	int32 OrganizationContactId = 1;
	int32 OrganizationId =2;
	OrganizationDto OrganizationDto = 3;

	int32 ContactTypeId = 4;
	ContactTypeDto ContactTypeDto = 5;
	google.protobuf.StringValue Value = 6;
	google.protobuf.StringValue Note = 7;
}

message EmployeePositionDto
{
	int32 EmployeePositionId = 1;
	string name = 2;
	google.protobuf.StringValue Note = 3;
}

message EmployeeDto
{
	int32 BusinessEntityId = 1;
	int32 EmployeeId = 2;
	int32 OrganizationId = 3;
	string FirstName = 4;
	string MiddleName = 5;
	google.protobuf.StringValue LastName = 6;
	int32 EmployeePositionId = 7;
	EmployeePositionDto EmployeePositionDto = 8;

	OrganizationDto OrganizationDto = 9;
	BusinessEntityDto BusinessEntityDto = 10;
}

// PASS
message TableDataDto
{
	int32 TableDataId = 1;
	string SchemaName = 2;
	string Name = 3;
	google.protobuf.StringValue RusName = 4;
}

// PASS
message TableColumnDataDto
{
	int32 TableColumnDataId = 1;
	google.protobuf.Int32Value TableDataId = 2;
	TableDataDto TableDataDto = 3;
	string Name = 4;
	google.protobuf.StringValue RusName = 5;
}

message LogAuthenticationDto
{
	int32 LogAuthenticationId = 1;
	google.protobuf.StringValue EnteredLogin = 2;
	bool FirstFactorResult = 3;
	bool SecondFactorResult = 4;
	string AuthServiceResponse = 5;
	google.protobuf.StringValue MAC = 6;
	google.protobuf.StringValue IP = 7;
	google.protobuf.StringValue MashineName = 8;
	google.protobuf.StringValue MashineUserName = 9;
	google.protobuf.Timestamp Date = 10;
}

// PASS
message UserSessionDto
{
	int32 UserSessionId = 1;
	int32 UserId = 3;
	UserDto UserDto = 4;
	google.protobuf.Timestamp CreatedAt = 5;
	google.protobuf.Timestamp ExpiredAt = 6;
	int32 LogAuthenticationId = 7;
	LogAuthenticationDto LogAuthenticationDto = 8;
	google.protobuf.BoolValue IsExpired = 9;

	reserved "SessionKey";
}

// PASS
message ErrorLogDto
{
	int32 ErrorLogId = 1;
	google.protobuf.Timestamp ErrorTime = 2;
	google.protobuf.Int32Value UserSessionId = 3;
	UserSessionDto UserSessionDto = 4;
	int32 ErrorNumber = 5;
	google.protobuf.Int32Value ErrorState = 6;
	google.protobuf.StringValue ErrorProcedure = 7;
	google.protobuf.Int32Value ErrorLine = 8;
	string ErrorMessage = 9;
	google.protobuf.Int32Value ErrorSeverity = 10;
}

message LogDto
{
	int32 LogId = 1;
	google.protobuf.Int32Value TableDataId = 2;
	TableDataDto TableDataDto = 3;
	int32 TableRowId = 4;
	string Action = 5;
	google.protobuf.Int32Value UserSessionId = 6;
	UserSessionDto UserSessionDto = 7;
	google.protobuf.Timestamp Date = 8;
	string GUID = 9;
}

// PASS
message LogChangeDto
{
	google.protobuf.Int32Value AuditLogId = 1;
	LogDto AuditLogDto = 2;
	google.protobuf.Int32Value TableColumnDataId = 3;
	TableColumnDataDto TableColumnDataDto = 4;
	google.protobuf.StringValue OldValue = 5;
	google.protobuf.StringValue NewValue = 6;
}

message JournalInstanceForCPARecordDto
{
	google.protobuf.Int32Value OrganizationId = 1;
	OrganizationDto OrganizationDto = 2;

	int32 JournalInstanceForCPARecordId = 3;

	google.protobuf.StringValue NameCPI = 4;
	google.protobuf.StringValue SerialCPI = 5;
	google.protobuf.Int32Value InstanceNumber = 6;

	google.protobuf.Int32Value ReceivedFromId = 7;
	BusinessEntityDto BusinessEntityDto = 8;

	google.protobuf.StringValue DateAndNumberCoverLetterReceive = 9;
	google.protobuf.StringValue DateAndNumberCoverLetterSend = 10;
	google.protobuf.StringValue DateAndNumberConfirmationSend = 11;

	google.protobuf.StringValue DateAndNumberCoverLetterReturn = 12;
	google.protobuf.StringValue DateAndNumberConfirmationReturn = 13;

	google.protobuf.Timestamp CommissioningDate = 14;
	google.protobuf.Timestamp DecommissioningDate = 15;

	google.protobuf.Timestamp DestructionDate = 16;

	google.protobuf.StringValue DestructionActNumber = 17;

	google.protobuf.StringValue Note = 18;

	google.protobuf.Int32Value SignFileId = 19;
	FileDto SignFileDto = 20;
}

message JournalInstanceCPAReceiverDto
{
	int32 JournalInstanceCPAReceiverId = 1;

	google.protobuf.Int32Value RecordId = 2;
	JournalInstanceForCPARecordDto RecordDto = 3;

	google.protobuf.Int32Value ReceiverId = 4;
	BusinessEntityDto ReceiverDto = 5;
}

message HardwareDto
{
	int32 HardwareId = 1;
	google.protobuf.Int32Value OrganizationId = 2;
	OrganizationDto OrganizationDto = 3;
	google.protobuf.StringValue Name = 4;
	google.protobuf.StringValue SerialNumber = 5;
	google.protobuf.StringValue Note = 6;
}

message JournalInstanceForCIHRecordDto
{
	google.protobuf.Int32Value OrganizationId = 1;
	OrganizationDto OrganizationDto = 2;

	google.protobuf.StringValue NameCPI = 3;
	google.protobuf.StringValue SerialCPI = 4;
	google.protobuf.Int32Value InstanceNumber = 5;

	google.protobuf.Int32Value ReceivedFromId = 6;
	BusinessEntityDto ReceivedFromDto = 7;

	google.protobuf.StringValue DateAndNumberCoverLetterReceive = 8;

	google.protobuf.Int32Value CPIUserId = 9;
	BusinessEntityDto CPIUserDto = 10;

	google.protobuf.StringValue DateAndNumberConfirmationIssue = 11;
	google.protobuf.StringValue InstallationDateAndConfirmation = 12;
	google.protobuf.Timestamp DestructionDate = 13;
	google.protobuf.StringValue DestructionActNumber = 14;
	google.protobuf.StringValue Note = 15;

	google.protobuf.Int32Value SignFileId = 16;
	FileDto SignFileDto = 17;

	int32 JournalInstanceForCIHRecordId = 18;
}

message JournalInstanceForCIHInstallerDto
{
	int32 JournalInstanceForCIHInstallerId = 1;

	int32 RecordId = 2;
	JournalInstanceForCIHRecordDto RecordDto = 3;

	int32 InstallerId = 4;

	BusinessEntityDto InstallerDto = 5;
}

message JournalInstanceForCIHConnectedHardwareDto
{
	int32 JournalInstanceForCIHConnectedHardwareId = 1;

	int32 RecordId = 2;
	JournalInstanceForCIHRecordDto RecordDto = 3;

	int32 HardwareId = 4;

	HardwareDto HardwareDto = 5;
}


message JournalInstanceForCIHDestructorDto
{
	int32 JournalInstanceForCIHDestructorId = 1;

	int32 RecordId = 2;
	JournalInstanceForCIHRecordDto RecordDto = 3;

	int32 DestructorId = 4;

	BusinessEntityDto DestructorDto = 5;
}

message KeyDocumentTypeDto
{
	int32 KeyDocumentTypeId = 1;
	string Name = 2;
	google.protobuf.StringValue Note = 3;
}

message KeyHolderTypeDto
{
	int32 KeyHolderTypeId = 1;
	string Name = 2;
}

message KeyHolderDto
{
	int32 KeyHolderId = 1;
	string SerialNumber = 2;

	int32 TypeId = 3;
	KeyHolderTypeDto KeyHolderTypeDto = 4;

	google.protobuf.Int32Value UserCPI = 5;
	BusinessEntityDto UserCPIDto = 6;

	google.protobuf.Int32Value SignFileId = 7;
	FileDto SignFileDto = 8;
}

message JournalTechnicalRecordDto
{
	google.protobuf.Int32Value OrganizationId = 1;
	OrganizationDto OrganizationDto = 2;

	int32 JournalTechnicalRecordId = 3;
	google.protobuf.Timestamp Date = 4;

	google.protobuf.StringValue TypeAndSerialUsedCPI = 5;
	google.protobuf.StringValue RecordOnMaintenanceCPI = 6;

	google.protobuf.Int32Value KeyDocumentTypeId = 7;
	KeyDocumentTypeDto KeyDocumentTypeDto = 8;

	google.protobuf.StringValue SerialCPIAndKeyDocumentInstanceNumber = 9;
	google.protobuf.StringValue NumberOneTimeKeyCarrierCPIZoneCryptoKeysInserted = 10;

	google.protobuf.Timestamp DestructionDate = 11;
	google.protobuf.StringValue ActNumber = 12;
	google.protobuf.StringValue Note = 13;

	google.protobuf.Int32Value SignFileId = 14;
	FileDto SignFileDto = 15;
}